<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameListFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoutBtn"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/logoutBtnText"
        style="@style/backBtn_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listTitle"
        android:text="@string/gameListTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        style="@style/gameWaitingListTitle_style"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/game_list_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/listTitle"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/joinGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/joinGameBtnText"
        style="@style/standardBtn_style"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createGameBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/createGameText"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        style="@style/standardBtn_style"/>



</RelativeLayout>